# applog

./: .gitignore  :memory  LESSONS.md  LESSONS_LEARNED.md  README.md  ROADMAP.md  applog.db.backup  main.py  pyproject.toml  rxconfig.py
applog/: applog.py  database.py
applog/components/jobs/: __init__.py  add_job.py  job_card.py  job_detail.py  job_list.py  notes.py
applog/components/main/: __init__.py  index_page.py
applog/components/shared/: __init__.py  formatters.py  search_bar.py  sidebar.py  status_badge.py
applog/components/templates/: __init__.py  template_form.py  template_list.py
applog/models/: __init__.py  job_application.py  note_template.py
applog/services/: job_service.py  template_service.py
docs/tutorials/: archive-feature.md  component_organisation.md
test/: test_job_service.py  test_template_service.py
