[project]
name = "applog"
version = "0.1.0"
description = "Job application tracker with search and filtering"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "pytest-cov>=7.0.0",
    "reflex>=0.6.6",
    "sqlalchemy>=2.0.0",
]

[dependency-groups]
dev = [
    "ipdb>=0.13.13",
    "ipython>=9.6.0",
    "mypy>=1.18.2",
    "pytest>=8.4.2",
    "rich>=14.2.0",
    "ruff>=0.14.3",
]
